--- a/views/index.jade
+++ b/views/index.jade
@@ -1,3 +1,16 @@
-- for (var x = 0; x < 3; x++)
-    li item
+//jade
+doctype html
+html
+    head
+        meta(charset='utf-8')
+        title MetaDetail
+        style
+            include ../public/stylesheets/style.css
+        script
+            include ../public/javascripts/index.js
+    body
+        ul
+            p: a(href='/tenement') 租户配置
+            p: a(href='/meta/get') 对象浏览
+            p: a(href='javascript:void()') 其他
 
