--- a/views/index.jade
+++ b/views/index.jade
@@ -10,7 +10,7 @@ html
             include ../public/javascripts/index.js
     body
         ul
-            p: a(href='/tenement') 租户配置
+            p: a(href='/static/tenement.html') 租户配置
             p: a(href='/meta/get') 对象浏览
             p: a(href='javascript:void()') 其他
 
