--- a/views/index.jade
+++ b/views/index.jade
@@ -12,5 +12,5 @@ html
         ul
             p: a(href='/static/tenement.html') 租户配置
             p: a(href='/meta/get') 对象浏览
+            p: a(href='/static/meta.html') 创建自定义对象
             p: a(href='javascript:void()') 其他
-
