--- a/views/meta.jade
+++ b/views/meta.jade
@@ -19,6 +19,9 @@ html
             a(href='/trigger/' + index) --SeeTrigger--|
             a--
             a(href='/validation/' + index) --SeeValidation
+            li
+                a(style='color:black') ----------------------------------------------------
+            br
 
 
 
