添加mysql操作,防止注入

--- a/public/static/head.jade
+++ b/public/static/head.jade
@@ -1,5 +1,7 @@
 style
     include ../stylesheets/style.css
+    include ../stylesheets/bootstrapform.css
 script
     include  ../javascripts/jquery-3.2.1.min.js
+
 
