--- a/views/login.jade
+++ b/views/login.jade
@@ -27,7 +27,9 @@ html
                 type:'post',
                 dataType:'json',
                 success:function(data){
-                    alert(data.success);
+                    if(data.success){
+                      window.location.href = '/';
+                    }
                 }
             })
         })
