--- a/views/seeDetail.jade
+++ b/views/seeDetail.jade
@@ -17,7 +17,11 @@ html
   注释
   多行注释
 
+a(href="/markDownPage/show", target="_blank")  meta 操作手册
+
+
 h2      #{body.display_name} 字段集!
+
 
 ul
 each val, index in body.schema
