添加拦截器

--- a/views/index.jade
+++ b/views/index.jade
@@ -51,3 +51,6 @@ html
             $('#3').bind('click', function () {
                 $('#myIframe').attr('src', '/static/meta.html')
             })
+            $('#4').bind('click', function () {
+                $('#myIframe').attr('src', '/static/metaCard.html')
+            })
