--- a/views/meta.jade
+++ b/views/meta.jade
@@ -19,6 +19,8 @@ html
             a(href='/trigger/' + index) --SeeTrigger--|
             a--
             a(href='/validation/' + index) --SeeValidation
+            a--
+            a(href='/layout/' + index) --SeeLayout
             li
                 a(style='color:black') ----------------------------------------------------
             br
