--- a/views/login.jade
+++ b/views/login.jade
@@ -12,7 +12,7 @@ html
             input#name(type='text')
             br
             a= '密码: '
-            input#pwd(type='text')
+            input#pwd(type='text' value='0c3cc2b229a290c98e6b161a607f48d3')
             input#but(type='button' value='登录')
     script.
         $('#but').bind('click',function(){
@@ -28,7 +28,10 @@ html
                 dataType:'json',
                 success:function(data){
                     if(data.success){
+                        alert(data.success)
                       window.location.href = '/';
+                    }else{
+                        alert(data.success)
                     }
                 }
             })
