--- a/views/trigger.jade
+++ b/views/trigger.jade
@@ -25,7 +25,7 @@ html
 
             br
             button#editTrigger 提交修改
-        #main(style="position: absolute;right: 10px; width: 300px;height:400px;")
+        #main(style="position: absolute;right: 10px; top:60px;width: 300px;height:400px;")
             br
             | 对象:
             input#metaName(type="text")
